[metadata]
name = dev_forum_23_dynamic_circuits
version = 1.0.0a1
url = https://github.com/jakelishman/dev-forum-23-dynamic-circuits
description = Source files and instructions for the dynamic-circuits track of the 2023 Qiskit developers' forum
author = Jake Lishman and Kevin Krsulich
license = Apache 2.0 License
license_files = LICENSE.txt

[options]
packages = find:
package_dir =
    = lib
install_requires =
    qiskit-terra>=0.24.0rc1

[options.packages.find]
where = lib
